--- a/styles/page.css
+++ b/styles/page.css
@@ -29,7 +29,6 @@
     font-size: 72px;
     font-weight: 900;
     line-height: 95px;
-    /* 131.944% */
     padding: 50px 344px 177px;
 }
 
@@ -93,7 +92,6 @@
     font-size: 64px;
     font-weight: 900;
     line-height: 88px;
-    /* 137.5% */
     letter-spacing: 7.04px;
     margin-bottom: 24px;
 }
@@ -104,13 +102,11 @@
     font-size: 18px;
     font-weight: 400;
     line-height: 30px;
-    /* 166.667% */
     margin-bottom: 48px;
 }
 
 .welcome-join {
     color: #FFF;
-    /* text-align: center; */
     font-family: Inter;
     font-size: 20px;
     font-weight: 700;
@@ -205,9 +201,7 @@
     color: #F00;
     font-family: Inter;
     font-size: 48px;
-    font-style: normal;
     font-weight: 700;
-    line-height: normal;
     margin: 112px 150px 16px 0px;
 }
 
@@ -233,9 +227,7 @@
     color: #070211;
     font-family: Inter;
     font-size: 24px;
-    font-style: normal;
     font-weight: 500;
-    line-height: normal;
     margin-bottom: 16px;
 }
 
@@ -243,9 +235,7 @@
     color: #070211;
     font-family: Merriweather;
     font-size: 72px;
-    font-style: normal;
     font-weight: 900;
-    line-height: normal;
     margin-bottom: 38px;
 }
 
@@ -259,7 +249,8 @@
     bottom: 114px;
     left: 24px;
 }
-.img1{
+
+.img1 {
     position: absolute;
     top: 70px;
     right: 250px;
@@ -275,9 +266,7 @@
     color: #F00;
     font-family: Inter;
     font-size: 24px;
-    font-style: normal;
     font-weight: 500;
-    line-height: normal;
     margin-bottom: 16px;
 }
 
@@ -285,9 +274,7 @@
     color: #070211;
     font-family: Merriweather;
     font-size: 48px;
-    font-style: normal;
     font-weight: 900;
-    line-height: normal;
     text-transform: capitalize;
     margin-bottom: 22px;
 }
@@ -295,6 +282,8 @@
 .portfolio-pics img {
     margin-top: 48px;
     border-radius: 16px;
+    width: calc(30% - 20px);
+    margin: 8px;
 }
 
 /* last section styling */
@@ -317,45 +306,105 @@
     text-align: center;
     font-family: Merriweather;
     font-size: 48px;
-    font-style: normal;
     font-weight: 900;
-    line-height: normal;
     text-transform: capitalize;
     margin-bottom: 22px;
 }
-.subscriber-btn{
+
+.subscriber-btn {
     margin: 48px;
-    margin-right:200px;
+    margin-right: 200px;
 }
-.subscriber-btn .email input{
+
+.subscriber-btn .email input {
     width: 648px;
     height: 72px;
-position: relative;
-background: #FFF;
-border: 0px;
-text-align: center;
-color: rgba(7, 2, 17, 0.30);
-text-align: center;
-font-family: Inter;
-font-size: 18px;
-font-style: normal;
-font-weight: 400;
-line-height: normal;
+    position: relative;
+    background: #FFF;
+    border: 0px;
+    text-align: center;
+    color: rgba(7, 2, 17, 0.30);
+    text-align: center;
+    font-family: Inter;
+    font-size: 18px;
+    font-weight: 400;
 }
-.subs-btn{
+
+.subs-btn {
     width: 210px;
-height: 72px;
-border-radius: 0px 50px 50px 0px;
-background: #F00;
-border: 0px;
-color: #FFF;
-text-align: center;
-font-family: Inter;
-font-size: 20px;
-font-style: normal;
-font-weight: 600;
-line-height: normal;
-text-transform: capitalize;
-margin-left: 0px;
-position: absolute;
+    height: 72px;
+    border-radius: 0px 50px 50px 0px;
+    background: #F00;
+    border: 0px;
+    color: #FFF;
+    text-align: center;
+    font-family: Inter;
+    font-size: 20px;
+    font-weight: 600;
+    text-transform: capitalize;
+    margin-left: 0px;
+    position: absolute;
+}
+
+/* footer styling */
+.line {
+    width: 1320px;
+    height: 1px;
+    background: rgba(30, 28, 28, 0.15);
+}
+
+.text {
+    color: #FFF;
+    font-family: Inter;
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 40px;
+    /* 166.667% */
+}
+
+.footer-info {
+    width: 1600px;
+    height: 609px;
+    background: #070211;
+}
+
+.contact-details {
+    display: flex;
+    justify-content: space-between;
+}
+
+.address {
+    margin: 120px 0px 50px 140px;
+}
+
+.contact-info {
+    margin: 120px 290px 0px 0px;
+}
+
+.social-links {
+    text-align: center;
+    margin: 48px 0px;
+    letter-spacing: 24px;
+}
+
+.end {
+    display: flex;
+    justify-content: space-between;
+}
+
+#end-left {
+    margin: 50px 0px 120px 140px;
+}
+
+#end-right {
+    margin: 50px 140px 120px 0px;
+}
+
+.decor-line {
+    border: none;
+    height: 2px;
+    background-color: #333;
+    margin: 20px 0;
+    position: relative;
+    margin: 0px 140px;
 }
